Se agregan clases para manejo de grafo y algoritmo de Floyd

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 .idea/vcs.xml
 .idea/workspace.xml
 UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd.iml
+out/production/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd/DataManager.class
+out/production/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd/Edge.class
+out/production/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd/FloydWarshall.class
+out/production/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd/Graph.class
+out/production/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd/Keyboard.class
+out/production/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd/META-INF/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd.kotlin_module
+out/production/UVG-CC2003-H9-Grafos-y-Algoritmo-Floyd/Recomendacion.class
